Bug 373774 - Search on Internet problem
Summary: Search on Internet problem
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-17 16:48 UTC by Dario Mari
Modified: 2017-03-17 00:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dario Mari 2016-12-17 16:48:16 UTC
Search on Internet Bookshop(ibs.it) always aborts with "server timeout error".
Running on Kubuntu 16.04 (64 bit)

Kde framework 5.28
Comment 1 Robby Stephenson 2017-03-17 00:56:09 UTC
Git commit d509f8fb13ea5a9eddc91cda082cc72dd59b3fdc by Robby Stephenson.
Committed on 17/03/2017 at 00:54.
Pushed by rstephenson into branch 'master'.

Update the InternetBookshop.it (IBS.it) data source

The Person search was removed. The Keyword, ISBN, and Title search all
use the same query URL for now. The edition field is not returned.
FIXED-IN: 3.0.2

M  +4    -0    ChangeLog
M  +132  -204  src/fetch/ibsfetcher.cpp
M  +2    -1    src/fetch/ibsfetcher.h
M  +7    -22   src/tests/ibsfetchertest.cpp
M  +0    -1    src/tests/ibsfetchertest.h

https://commits.kde.org/tellico/d509f8fb13ea5a9eddc91cda082cc72dd59b3fdc