Update the InternetBookshop.it (IBS.it) data source

The Person search was removed. The Keyword, ISBN, and Title search all
use the same query URL for now. The edition field is not returned.

BUG: 373774
FIXED-IN: 3.0.2