src/fetch/ibsfetcher.cpp
@@ -30,6 +30,7 @@
 #include "../fieldformat.h"
 #include "../core/filehandler.h"
 #include "../images/imagefactory.h"
+#include "../utils/isbnvalidator.h"
 #include "../tellico_debug.h"
 
 #include <KLocalizedString>
@@ -43,9 +44,11 @@
 #include <QTextStream>
 #include <QVBoxLayout>
 #include <QUrlQuery>
+#include <QJsonDocument>
+#include <QJsonObject>
 
 namespace {
-  static const char* IBS_BASE_URL = "http://www.internetbookshop.it/ser/serpge.asp";
+  static const char* IBS_BASE_URL = "https://www.ibs.it/search/";
 }
 
 using namespace Tellico;
@@ -81,34 +84,33 @@ void IBSFetcher::search() {
 
   QUrl u(QString::fromLatin1(IBS_BASE_URL));
   QUrlQuery q;
+  q.addQueryItem(QLatin1String("ts"), QLatin1String("as"));
 
   switch(request().key) {
     case Title:
-      q.addQueryItem(QLatin1String("Type"), QLatin1String("keyword"));
-      q.addQueryItem(QLatin1String("T"), request().value);
-      break;
-
-    case Person:
-      q.addQueryItem(QLatin1String("Type"), QLatin1String("keyword"));
-      q.addQueryItem(QLatin1String("A"), request().value);
+      {
+        // can't have ampersands
+        QString s = request().value;
+        s.remove(QLatin1Char('&'));
+        q.addQueryItem(QLatin1String("query"), s);
+      }
       break;
 
     case ISBN:
       {
-        u = u.adjusted(QUrl::RemoveFilename);
-        u.setPath(u.path() + QLatin1String("serdsp.asp"));
-
         QString s = request().value;
-        s.remove(QLatin1Char('-'));
         // limit to first isbn
         s = s.section(QLatin1Char(';'), 0, 0);
-        q.addQueryItem(QLatin1String("isbn"), s);
+        // isbn10 search doesn't work?
+        s = ISBNValidator::isbn13(s);
+        // dashes don't work
+        s.remove(QLatin1Char('-'));
+        q.addQueryItem(QLatin1String("query"), s);
       }
       break;
 
     case Keyword:
-      q.addQueryItem(QLatin1String("Type"), QLatin1String("keyword"));
-      q.addQueryItem(QLatin1String("S"), request().value);
+      q.addQueryItem(QLatin1String("query"), request().value);
       break;
 
     default:
@@ -121,11 +123,7 @@ void IBSFetcher::search() {
 
   m_job = KIO::storedGet(u, KIO::NoReload, KIO::HideProgressInfo);
   KJobWidgets::setWindow(m_job, GUI::Proxy::widget());
-  if(request().key == ISBN) {
-    connect(m_job, SIGNAL(result(KJob*)), SLOT(slotCompleteISBN(KJob*)));
-  } else {
-    connect(m_job, SIGNAL(result(KJob*)), SLOT(slotComplete(KJob*)));
-  }
+  connect(m_job, SIGNAL(result(KJob*)), SLOT(slotComplete(KJob*)));
 }
 
 void IBSFetcher::stop() {
@@ -155,85 +153,39 @@ void IBSFetcher::slotComplete(KJob*) {
     return;
   }
 
-  // since the fetch is done, don't worry about holding the job pointer
-  m_job = 0;
-
   QString s = Tellico::decodeHTML(data);
   // really specific regexp
-  //QString pat = QLatin1String("http://www.internetbookshop.it/code/");
-  QString pat = QLatin1String("http://www.ibs.it/code/");
-  QRegExp anchorRx(QLatin1String("<a\\s+[^>]*href\\s*=\\s*[\"'](") +
-                   QRegExp::escape(pat) +
-                   QLatin1String("[^\"]*)\"[^>]*><b>([^<]+)<"), Qt::CaseInsensitive);
-  anchorRx.setMinimal(true);
+  QRegExp itemRx(QLatin1String("class=\"item \">(.*)class=\"price"));
+  itemRx.setMinimal(true);
+  QRegExp titleRx(QLatin1String("<div class=\"title\">\\s*<a href=\"(.*)\">(.*)</div>"));
+  titleRx.setMinimal(true);
+  QRegExp yearRx(QLatin1String("<label>Anno</label>(.*)</"));
+  yearRx.setMinimal(true);
   QRegExp tagRx(QLatin1String("<.*>"));
   tagRx.setMinimal(true);
 
-  QString u, t, d;
-  int pos2;
-  for(int pos = anchorRx.indexIn(s); m_started && pos > -1; pos = anchorRx.indexIn(s, pos+anchorRx.matchedLength())) {
-    if(!u.isEmpty()) {
+  QString url, title, year;
+  for(int pos = itemRx.indexIn(s); m_started && pos > -1; pos = itemRx.indexIn(s, pos+itemRx.matchedLength())) {
+    QString s = itemRx.cap(1);
+    if(s.contains(titleRx)) {
+      url = titleRx.cap(1);
+      title = titleRx.cap(2).remove(tagRx).simplified();
+    }
+    if(s.contains(yearRx)) {
+      year = yearRx.cap(1).remove(tagRx).simplified();
+    }
+    if(!url.isEmpty() && !title.isEmpty()) {
       // the url probable contains &amp; so be careful
-      QUrl url(u.replace(QLatin1String("&amp;"), QLatin1String("&")));
-      FetchResult* r = new FetchResult(Fetcher::Ptr(this), t, d);
-      m_matches.insert(r->uid, url);
+      QUrl u = m_job->url();
+      u = u.resolved(QUrl(url.replace(QLatin1String("&amp;"), QLatin1String("&"))));
+      FetchResult* r = new FetchResult(Fetcher::Ptr(this), title, year);
+      m_matches.insert(r->uid, u);
       emit signalResultFound(r);
-
-      u.clear();
-      t.clear();
-      d.clear();
     }
-    u = anchorRx.cap(1);
-    t = anchorRx.cap(2);
-    pos2 = s.indexOf(QLatin1String("<br>"), pos, Qt::CaseInsensitive);
-    if(pos2 > -1) {
-      int pos3 = s.indexOf(QLatin1String("<br>"), pos2+1, Qt::CaseInsensitive);
-      if(pos3 > -1) {
-        d = s.mid(pos2, pos3-pos2).remove(tagRx).simplified();
-      }
-    }
-  }
-
-  if(!u.isEmpty()) {
-    FetchResult* r = new FetchResult(Fetcher::Ptr(this), t, d);
-    m_matches.insert(r->uid, QUrl(u.replace(QLatin1String("&amp;"), QLatin1String("&"))));
-    emit signalResultFound(r);
-  }
-
-  stop();
-}
-
-void IBSFetcher::slotCompleteISBN(KJob* job_) {
-  if(m_job->error()) {
-    m_job->ui()->showErrorMessage();
-    stop();
-    return;
-  }
-
-  QByteArray data = m_job->data();
-  if(data.isEmpty()) {
-    myDebug() << "no data";
-    stop();
-    return;
   }
 
   // since the fetch is done, don't worry about holding the job pointer
   m_job = 0;
-
-  QString str = Tellico::decodeHTML(data);
-  if(str.indexOf(QLatin1String("Libro non presente"), 0, Qt::CaseInsensitive) > -1) {
-    stop();
-    return;
-  }
-  Data::EntryPtr entry = parseEntry(str);
-  if(entry) {
-    QString desc = entry->field(QLatin1String("author"))
-                 + QLatin1Char('/') + entry->field(QLatin1String("publisher"));
-    FetchResult* r = new FetchResult(Fetcher::Ptr(this), entry->title(), desc, entry->field(QLatin1String("isbn")));
-    m_matches.insert(r->uid, static_cast<KIO::TransferJob*>(job_)->url());
-    emit signalResultFound(r);
-  }
-
   stop();
 }
 
@@ -278,134 +230,96 @@ Tellico::Data::EntryPtr IBSFetcher::fetchEntryHook(uint uid_) {
 }
 
 Tellico::Data::EntryPtr IBSFetcher::parseEntry(const QString& str_) {
-//  QString pat = QLatin1String("%1(?:<[^>]+>)+([^<>\\s][^<>]+)");
-  QString pat = QLatin1String("%1(?:<[^>]+>)+(.+)</td.*>");
+  QRegExp jsonRx(QLatin1String("<script type=\"application/ld\\+json\">(.*)</"));
+  jsonRx.setMinimal(true);
+
+  if(!str_.contains(jsonRx)) {
+    myDebug() << "No JSON block";
+    return Data::EntryPtr();
+  }
+  
+  QJsonDocument doc = QJsonDocument::fromJson(jsonRx.cap(1).toUtf8());
+  QVariantMap objectMap = doc.object().toVariantMap();
+  QVariantMap resultMap = objectMap.value(QLatin1String("mainEntity")).toMap();
+  if(resultMap.isEmpty()) {
+    myDebug() << "no JSON object";
+    return Data::EntryPtr();
+  }
 
   Data::CollPtr coll(new Data::BookCollection(true));
+  Data::EntryPtr entry(new Data::Entry(coll));
+  
+  // as genre, take the last breadcrumb
+  QString genre = value(objectMap, "breadcrumb");
+  genre = genre.section(QLatin1String(">"), -1);
+  entry->setField(QLatin1String("genre"), genre);  
+  
+  // the title in the embedded loses it's identifier? "La..."
+  entry->setField(QLatin1String("title"), value(resultMap, "name"));
+  entry->setField(QLatin1String("author"), value(resultMap, "author"));
 
- // map captions in HTML to field names
-  QHash<QString, QString> fieldMap;
-  fieldMap.insert(QLatin1String("Titolo"), QLatin1String("title"));
-  fieldMap.insert(QLatin1String("Autore"), QLatin1String("author"));
-  fieldMap.insert(QLatin1String("Anno"), QLatin1String("pub_year"));
-  fieldMap.insert(QLatin1String("Categoria"), QLatin1String("genre"));
-  fieldMap.insert(QLatin1String("Rilegatura"), QLatin1String("binding"));
-  fieldMap.insert(QLatin1String("Editore"), QLatin1String("publisher"));
-  fieldMap.insert(QLatin1String("Dati"), QLatin1String("edition"));
-  fieldMap.insert(QLatin1String("Traduttore"), QLatin1String("translator"));
-  fieldMap.insert(QLatin1String("Curatore"), QLatin1String("editor"));
+  const QString bookFormat = value(resultMap, "bookFormat");
+  if(bookFormat == QLatin1String("http://schema.org/Paperback")) {
+    entry->setField(QLatin1String("binding"), i18n("Paperback"));
+  } else if(bookFormat == QLatin1String("http://schema.org/Hardcover")) {
+    entry->setField(QLatin1String("binding"), i18n("Hardback"));
+  } else if(bookFormat == QLatin1String("http://schema.org/EBook")) {
+    entry->setField(QLatin1String("binding"), i18n("E-Book"));
+  }
 
+  entry->setField(QLatin1String("pub_year"), value(resultMap, "datePublished"));
+  entry->setField(QLatin1String("cover"), value(resultMap, "image"));
+  entry->setField(QLatin1String("isbn"), value(resultMap, "isbn"));
+
+  // inLanguage is upper-case language code
+  const QString lang = value(resultMap, "inLanguage");
+  entry->setField(QLatin1String("language"), QLocale(lang.toLower()).nativeLanguageName());
+  
+  Data::FieldPtr f(new Data::Field(QLatin1String("plot"), i18n("Plot Summary"), Data::Field::Para));
+  coll->addField(f);
+  entry->setField(f, value(resultMap, "description"));
+
+  entry->setField(QLatin1String("pages"), value(resultMap, "numberOfPages"));
+  entry->setField(QLatin1String("publisher"), value(resultMap, "publisher"));
+  
+  // multiple authors do not show up in the embedded JSON
+  QRegExp titleDivRx(QLatin1String("<div id=\"title\">(.*)</div>"));
+  titleDivRx.setMinimal(true);
+  if(str_.contains(titleDivRx)) {
+    const QString titleDiv = titleDivRx.cap(1);
+    QRegExp authorRx(QLatin1String("<a href=\"/libri/autori/[^>]+>(.*)</a>"));
+    authorRx.setMinimal(true);
+    QStringList authors;
+    for(int pos = authorRx.indexIn(titleDiv); pos > -1; pos = authorRx.indexIn(titleDiv, pos+authorRx.matchedLength())) {
+      authors << authorRx.cap(1).simplified();
+    }
+    if(!authors.isEmpty()) {
+      entry->setField(QLatin1String("author"), authors.join(FieldFormat::delimiterString()));
+    }
+    // the title in the embedded loses it's identifier? "La..."
+    QRegExp labelRx(QLatin1String("<label>(.*)</label>"));
+    if(titleDiv.contains(labelRx)) {
+      entry->setField(QLatin1String("title"), labelRx.cap(1).simplified());
+    }
+  }
+  
   QRegExp tagRx(QLatin1String("<.*>"));
   tagRx.setMinimal(true);
 
-  QRegExp pagesRx(QLatin1String("\\s*(\\d+) p\\.(\\s*,\\s*)?"));
-  QRegExp yearRx(QLatin1String("^\\d{4}"));
-
-  Data::EntryPtr entry(new Data::Entry(coll));
-
-  for(QHash<QString, QString>::Iterator it = fieldMap.begin(); it != fieldMap.end(); ++it) {
-    QRegExp infoRx(pat.arg(it.key()));
-    infoRx.setMinimal(true);
-    int pos = infoRx.indexIn(str_);
-    if(pos > -1) {
-      if(it.value() == QLatin1String("edition")) {
-        QString data = infoRx.cap(1).remove(tagRx).trimmed();
-        int pos2 = pagesRx.indexIn(data);
-        if(pos2 > -1) {
-          entry->setField(QLatin1String("pages"), pagesRx.cap(1));
-          data = data.remove(pagesRx);
-        }
-        // assume that if the value starts with 4 digits, then it's a year
-        pos2 = yearRx.indexIn(data);
-        if(pos2 > -1) {
-          entry->setField(QLatin1String("pub_year"), yearRx.cap(0));
-          data = data.remove(yearRx).trimmed();
-          // might start with a comma now
-          if(data.startsWith(QLatin1String(","))) {
-            data = data.mid(1).trimmed();
-          }
-        }
-        // now it might be the binding
-        if(data == QLatin1String("brossura")) {
-          entry->setField(QLatin1String("binding"), i18n("Paperback"));
-        } else if(data == QLatin1String("rilegato")) {
-          entry->setField(QLatin1String("binding"), i18n("Hardback"));
-        } else {
-          entry->setField(it.value(), data);
-        }
-      } else {
-        entry->setField(it.value(), infoRx.cap(1).remove(tagRx).trimmed());
-      }
-    }
+  // editor is not in embedded json
+  QRegExp editorRx(QLatin1String("<strong>Curatore:</strong>(.*)</div"));
+  editorRx.setMinimal(true);
+  if(str_.contains(editorRx)) {
+    entry->setField(QLatin1String("editor"), editorRx.cap(1).remove(tagRx).simplified());    
   }
 
-  QRegExp isbnRx(QLatin1String("isbn=([\\dxX]{13})"), Qt::CaseInsensitive);
-  QString isbn;
-  int pos = isbnRx.indexIn(str_);
-  if(pos > -1) {
-    isbn = isbnRx.cap(1);
+  // editor is not in embedded json
+  QRegExp translatorRx(QLatin1String("<strong>Traduttore:</strong>(.*)</div"));
+  translatorRx.setMinimal(true);
+  if(str_.contains(translatorRx)) {
+    entry->setField(QLatin1String("translator"), translatorRx.cap(1).remove(tagRx).simplified());    
   }
-  // image
-  if(!isbn.isEmpty()) {
-    entry->setField(QLatin1String("isbn"), isbn);
-#if 1
-    QUrl imgURL(QString::fromLatin1("http://giotto.ibs.it/cop/copt13.asp?f=%1").arg(isbn));
-//    myLog() << "cover = " << imgURL;
-    QString id = ImageFactory::addImage(imgURL, true, QUrl(QString::fromLatin1("http://internetbookshop.it")));
-    if(!id.isEmpty()) {
-      entry->setField(QLatin1String("cover"), id);
-    }
-#else
-    QRegExp imgRx(QString::fromLatin1("<img\\s+[^>]*\\s*src\\s*=\\s*\"(http://[^/]*\\.ibs\\.it/[^\"]+e=%1)").arg(isbn));
-    imgRx.setMinimal(true);
-    pos = imgRx.indexIn(str_);
-    if(pos > -1) {
-//      myLog() << "cover = " << imgRx.cap(1);
-      QString id = ImageFactory::addImage(imgRx.cap(1), true, QUrl("http://internetbookshop.it"));
-      if(!id.isEmpty()) {
-        entry->setField(QLatin1String("cover"), id);
-      }
-    }
-#endif
-  }
-
-  // now look for description
-  QRegExp descRx(QLatin1String("Descrizione(?:<[^>]+>)+([^<>\\s].+)</span>"), Qt::CaseInsensitive);
-  descRx.setMinimal(true);
-  pos = descRx.indexIn(str_);
-  if(pos == -1) {
-    descRx.setPattern(QLatin1String("In sintesi(?:<[^>]+>)+([^<>\\s].+)</span>"));
-    pos = descRx.indexIn(str_);
-  }
-  if(pos > -1) {
-    Data::FieldPtr f(new Data::Field(QLatin1String("plot"), i18n("Plot Summary"), Data::Field::Para));
-    coll->addField(f);
-    entry->setField(f, descRx.cap(1).simplified());
-  }
-
-  // IBS switches the surname and family name of the author and translator
-  const QStringList peopleFields = QStringList() << QLatin1String("author")
-                                                 << QLatin1String("editor")
-                                                 << QLatin1String("translator");
-  foreach(const QString& fieldName, peopleFields) {
-    QStringList names = FieldFormat::splitValue(entry->field(fieldName));
-    if(!names.isEmpty() && !names[0].isEmpty()) {
-      for(QStringList::Iterator it = names.begin(); it != names.end(); ++it) {
-        if((*it).indexOf(QLatin1Char(',')) > -1) {
-          continue; // skip if it has a comma
-        }
-        QStringList words = (*it).split(QLatin1Char(' '));
-        if(words.isEmpty()) {
-          continue;
-        }
-        // put first word in back
-        words.append(words[0]);
-        words.pop_front();
-        *it = words.join(QLatin1String(" "));
-      }
-      entry->setField(fieldName, names.join(FieldFormat::delimiterString()));
-    }
-  }
+  
   return entry;
 }
 
@@ -430,7 +344,7 @@ QString IBSFetcher::defaultName() {
 }
 
 QString IBSFetcher::defaultIcon() {
-  return favIcon("http://internetbookshop.it");
+  return favIcon("http://ibs.it");
 }
 
 IBSFetcher::ConfigWidget::ConfigWidget(QWidget* parent_)
@@ -442,4 +356,18 @@ IBSFetcher::ConfigWidget::ConfigWidget(QWidget* parent_)
 
 QString IBSFetcher::ConfigWidget::preferredName() const {
   return IBSFetcher::defaultName();
+}
+
+// static
+QString IBSFetcher::value(const QVariantMap& map, const char* name) {
+  const QVariant v = map.value(QLatin1String(name));
+  if(v.isNull())  {
+    return QString();
+  } else if(v.canConvert(QVariant::String)) {
+    return v.toString();
+  } else if(v.canConvert(QVariant::StringList)) {
+    return v.toStringList().join(Tellico::FieldFormat::delimiterString());
+  } else {
+    return QString();
+  }
 }
